:lipstick: Fixed bullet point spacing issue in text component

--- a/legacy-css/src/sass/core/_core-typography.scss
+++ b/legacy-css/src/sass/core/_core-typography.scss
@@ -59,7 +59,7 @@ p, tr, td {
   background-size: 6px;
   background-repeat: no-repeat;
   background-position: 12px .6em;
-  padding-left: 2.5rem; //TODO check how does this behave with clamp function on root element
+  padding-left: calc(2.5rem / 1.6);
   list-style: none;
   .primary-100 &,
   .slate-blue &,
